--- a/architecture.tex
+++ b/architecture.tex
@@ -1,4 +1,4 @@
-\chapter{Softwarearchitektur des Java Medical Imaging Toolkit}
+\chapter{Softwarearchitektur des Java Medical Imaging Toolkit} \label{architecture}
 
 \section{Die Eclipse Rich Client Platform}
 
