--- a/header.tex
+++ b/header.tex
@@ -6,6 +6,8 @@
 
 %\usepackage[T1]{fontenc}
 
+\usepackage{listings} 
+
 \usepackage{blindtext}
 \usepackage{fancyhdr} %Fuer Kopf und Fusszeilen
 \usepackage{anysize} %Damit man Raender leicht einstellen kann
@@ -69,6 +71,8 @@
 %\marginsize{3.5cm}{1.75cm}{2.5cm}{2.25cm}
 
 \definecolor{haw_rot}{RGB}{160,0,0}
+\definecolor{lgrey}{RGB}{240,240,240}
+
 
 \newcommand{\mytoprule}{\specialrule{0.12em}{0em}{0em}}
 \newcommand{\mybottomrule}{\specialrule{0.12em}{0em}{0em}} 
