--- a/literature.bib
+++ b/literature.bib
@@ -125,3 +125,10 @@
   	YEAR         = "2013",
   }
   
+   @BOOK{starke:swa,
+    	AUTHOR       = "Eilebrecht, Karl and Starke, Gernot",
+    	TITLE        = "Patterns kompakt - Entwurfsmuster für effektive Software-Entwicklung",
+    	PUBLISHER    = "Springer Vieweg",
+    	YEAR         = "2013",
+    }
+  
