--- a/literature.bib
+++ b/literature.bib
@@ -66,6 +66,14 @@
        url = "{ftp://medical.nema.org/medical/dicom/2011/11_06pu.pdf}"
    }
  
+ @misc{sitk:filter,
+        author = "Lehmann, Gaëtan and de Vilvert, Domaine and Tonddast-Navaei, Ali",
+        publisher = "{Project WrapITK}",
+        title = "WrapITK release page for version 0.3.0",
+        year = "2009",
+        url = "{http://code.google.com/p/wrapitk/wiki/Release030#Class_coverage}"
+    }
+ 
  @misc{eclipse:help,
         author = "{The Eclipse Foundation}",
         title = "Eclipse documentation - Current Release",
